--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,89 @@
+body {
+    background-color: rgb(11, 11, 88);
+}
+
+.main-title{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(241, 249, 167);
+    padding: 20px;
+}
+
+.input-search {
+    background-color: rgb(11, 11, 88);
+    border: 2px solid rgb(241, 249, 167);
+    width: 40%;
+}
+
+.submit-button {
+    background-color: rgb(241, 249, 167) ;
+    padding: 5px;
+    border-radius: 10px;
+    margin-left: 10px;
+    color: rgb(11, 11, 88);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
+
+.reset-button{
+    background-color: rgb(241, 249, 167) ;
+    padding: 5px;
+    border-radius: 10px;
+    margin-left: 10px;
+    color: rgb(11, 11, 88);
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
+
+.form {
+    padding: 25px;
+}
+
+.favourites {
+    border: 3px solid rgb(200, 146, 200);
+}
+
+.favourite-series-title{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(11, 11, 88);
+    background-color:  rgb(200, 146, 200);
+    padding: 10px;
+}
+
+.title-card{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: rgb(241, 249, 167);
+   padding: 20px;
+    font-size: 12px;
+}
+
+.search {
+    border: 3px solid rgb(237, 214, 130);
+}
+
+.search-series-title {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color:  rgb(11, 11, 88);
+    background-color: rgb(237, 214, 130);
+    padding: 10px;
+}
+
 .section {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    width: 100vw;
 
 }
 
 .anime-card {
-    width: 500px;
+   width: 300px;
 }
 
-}
-.divs {
-    padding: 20px;
-}
 .hidden {
-    display: none;
+    display: ;
 }
+
 .favourite-card{
-    background-color: plum;
+    background-color:  rgb(227, 226, 206);
 }
+
 .title-anime-card {
-    color: rgb(95, 41, 95);
+    color: rgb(71, 19, 36);
 }
